--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osiris-es",
-  "version": "1.0.3",
+  "version": "1.0.9",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "aws-sdk": "^2.197.0",
-    "faker": "^4.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "mongojs": "^2.5.0",
-    "tape": "^4.8.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "prettier": "1.10.2"
+    "prettier": "1.10.2",
+    "faker": "^4.1.0",
+    "tape": "^4.8.0"
   }
 }
