--- a/examples/lambda-postrgesdb/package.json
+++ b/examples/lambda-postrgesdb/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "osiris-es": "^1.3.0"
+    "osiris-es": "^1.3.0",
+    "serverless-plugin-additional-stacks": "^1.2.0"
   }
 }
