--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "repository": "https://github.com/assafg/osiris",
     "license": "MIT",
     "scripts": {
-        "test": "node ./tests/EventSource.spec",
+        "test": "yarn build && mocha",
         "ts": "tsc --watch",
         "build": "tsc",
         "prettier": "prettier --write 'src/**'"
@@ -25,8 +25,11 @@
         "@types/mongodb": "^3.3.11",
         "@types/pg": "^7.11.2",
         "@types/uuid": "^3.4.6",
+        "chai": "^4.2.0",
         "faker": "^4.1.0",
         "flow-bin": "^0.112.0",
+        "mocha": "^7.1.2",
+        "mongodb-memory-server": "^6.5.2",
         "mongojs": "^3.1.0",
         "prettier": "1.19.1",
         "tape": "^4.11.0"
